--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -15,11 +15,9 @@
       <%= render 'shared/error_messages', object: f.object %>
 
       <% unless user_signed_in? %>
-        <%= f.simple_fields_for @user do |u| %>
-
+        <%= f.simple_fields_for @user, validate: true do |u| %>
           <%= u.input :email, placeholder: I18n.t('activerecord.attributes.user.email'), autofocus: true, class: 'topic-placeholder' %>
           <%= u.input :name, placeholder: I18n.t('activerecord.attributes.user.name'), class: 'topic-placeholder' %>
-
         <% end %>
       <% end %>
 
@@ -60,7 +58,7 @@
         </div>
       </div>
       
-      <%= f.simple_fields_for :posts do |p| %>
+      <%= f.simple_fields_for :posts, validate: true do |p| %>
         <%= p.input :body, label: I18n.t(:message), input_html: {:rows => 8, :cols => 60, placeholder: I18n.t(:how_can_we_help), label: 'Message', class: 'disable-empty form-control topic-placeholder'} %>
         <% unless cloudinary_enabled? %>
           <%= p.file_field :attachments, multiple: true%>
