--- a/app/views/admin/topics/_ticket.html.erb
+++ b/app/views/admin/topics/_ticket.html.erb
@@ -1,6 +1,6 @@
 <div id="ticket-info" class="no-side-pad row">
   <div class="col-md-3 col-lg-3 hidden-xs hidden-sm" id="left-col-user-info">
-    <%= render partial: 'admin/users/user_info_with_tickets', locals: { user: @topic.user } %>
+    <%= render partial: 'admin/users/user_info_with_tickets', locals: { user: @topic.user } if @topic.user.present? %>
   </div>
 
   <div id="ticket-controls" class="col-md-9 col-xs-12 col-lg-9">
