--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,7 @@
 
 <div class="jumbotron text-center" id="home-search">
   <h1 id="how-help" class="text-center"><%= t(:how_can_we_help) %></h1>
+  <h1>dddd</h1>
   <%= render 'result/search_form' %>
 </div>
 
