--- a/app/themes/flat/views/categories/show.html.erb
+++ b/app/themes/flat/views/categories/show.html.erb
@@ -1,4 +1,4 @@
-<% title "#{AppSettings['settings.site_name']}: #{@page_title}" %>
+<% title "Biactiva" %>
 <% meta_tag :description, "#{@category.meta_description}" %>
 <% meta_tag :keywords, "#{@category.keywords}" %>
 
