--- a/app/themes/light/views/categories/show.html.erb
+++ b/app/themes/light/views/categories/show.html.erb
@@ -1,4 +1,4 @@
-<% title "aaaaaaaaaaaaaa" %>
+<% title "#{AppSettings['settings.site_name']}: #{@page_title}" %>
 <% meta_tag :description, "#{@category.meta_description}" %>
 <% meta_tag :keywords, "#{@category.keywords}" %>
 
