--- a/app/themes/flat/views/home/index.html.erb
+++ b/app/themes/flat/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<% title "aaaa" %>
+<% title "#{AppSettings['settings.site_name']}: #{@page_title}" %>
 
 <% content_for :home do %>
 <div class="text-center" id="home-search">
